fix: don't return urls to unvalidated videos
Any video that is awaiting moderation shall not return its URL
