# backend/docs/swagger.yaml
@@ -777,6 +777,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/models.ApiError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ApiError'
         "404":
           description: Not Found
           schema:
